--- a/SignUp.html
+++ b/SignUp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
-  <link rel="stylesheet" href="css/SignUp_styles.css">
+  <link rel="stylesheet" href="SignUp_styles.css">
 </head>
 <body>
   <div class="container">
@@ -34,9 +34,9 @@
               Already have an account? <a href="Login.html">Login</a>
           </div>
           <div class="social-login">
-              <button><img src="images/facebook.png"></button>
-              <button><img src="images/Google.png"></button>
-              <button><img src="images/Apple.png"></button>
+              <button><img src="facebook.png"></button>
+              <button><img src="Google.png"></button>
+              <button><img src="Apple.png"></button>
           </div>
       </div>
   </div>
