--- a/pages/Index.html
+++ b/pages/Index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Index_styles.css">
+    <link rel="stylesheet" href="stylesheets/Index_styles.css">
     <title>HeritScope Lanka</title>
     
 </head>
 <body>
     <header>
         <nav>
-            <a href="events_calendar.html">Cultural Calendar</a>
-            <a href="ella.html">Nature's Wonders</a>
-            <a href="heritage.html">Historic Treasures</a>
+            <a href="pages/events_calendar.html">Cultural Calendar</a>
+            <a href="pages/N-Heritage_List.html">Nature's Wonders</a>
+            <a href="pages/H-Heritage_List.html">Historic Treasures</a>
         </nav>
         <div class="content">
             <h1>HeritScope Lanka</h1>
@@ -20,11 +20,11 @@
         </div>
         <div class="account-container" onclick="toggleDropdown()">
             <div class="account-icon">
-                <img src="images/user.png" alt="Account Icon">
+                <img src="icons/user.png" alt="Account Icon">
             </div>
             <div class="dropdown" id="accountDropdown">
                 <div class="dropdown-header">
-                    <img src="images/avatar.png" alt="User Avatar">
+                    <img src="icons/avatar.png" alt="User Avatar">
                     <div class="user-info">
                         <h4>John Doe</h4>
                         <p>Online</p>
@@ -32,11 +32,11 @@
                 </div>
                 <div class="DD-links">
                     <ul class="dropdown-menu">
-                        <li><a href="Profile.html"> Account </a></li>
+                        <li><a href="pages/Profile.html"> Account </a></li>
                         <li>Travel Plan</li>
                         <li>Settings</li>
                         <li>Support</li>
-                        <li><a href="Login.html">Logout</a></li>
+                        <li><a href="pages/Login.html">Logout</a></li>
                     </ul>
                     </div>
             </div>
