--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/Profile_styles.css">
+  <link rel="stylesheet" href="stylesheets/Profile_styles.css">
   <title>Dynamic Calendar</title>
   <style>
     body {
@@ -84,9 +84,9 @@
   
   <header class="headerd">
     <nav>
-        <a href="events_calendar.html">Cultural Calendar</a>
-        <a href="ella.html">Nature's Wonders</a>
-        <a href="heritage.html">Historic Treasures</a>
+        <a href="pages/events_calendar.html">Cultural Calendar</a>
+        <a href="pages/ella.html">Nature's Wonders</a>
+        <a href="pages/heritage.html">Historic Treasures</a>
     </nav>
     
 </header>
@@ -94,7 +94,7 @@
     <div class="content">
       <div class="profile-container">
         <div class="profile-header">
-          <img src="images/avatar.png" alt="Profile Picture">
+          <img src="icons/avatar.png" alt="Profile Picture">
           <h2>John Doe</h2>
         </div>
     
