--- a/pages/ella.html
+++ b/pages/ella.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella - Demodara</title>
-    <link rel="stylesheet" href="css/HNEStyles.css">
+    <link rel="stylesheet" href="stylesheets/HNEStyles.css">
 </head>
 <body>
     <header class="headerb">
@@ -15,11 +15,11 @@
         </nav>
         <div class="account-container" onclick="toggleDropdown()">
             <div class="account-icon">
-                <img src="images/user.png" alt="Account Icon">
+                <img src="icons/user.png" alt="Account Icon">
             </div>
             <div class="dropdown" id="accountDropdown">
                 <div class="dropdown-header">
-                    <img src="images/avatar.png" alt="User Avatar">
+                    <img src="icons/avatar.png" alt="User Avatar">
                     <div class="user-info">
                         <h4>John Doe</h4>
                         <p>Online</p>
@@ -55,10 +55,10 @@
                 <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <div class="social-media">
-                    <a href="#"><img src="images/facebook.png" alt="Google"></a>
-                    <a href="#"><img src="images/instagram.webp" alt="Facebook"></a>
-                    <a href="#"><img src="images/youtube.webp" alt="Instagram"></a>
-                    <a href="#"><img src="images/x.webp" alt="Twitter"></a>
+                    <a href="#"><img src="icons/facebook.png" alt="Google"></a>
+                    <a href="#"><img src="icons/instagram.webp" alt="Facebook"></a>
+                    <a href="#"><img src="icons/youtube.webp" alt="Instagram"></a>
+                    <a href="#"><img src="icons/x.webp" alt="Twitter"></a>
                 </div>
             </div>
     
