--- a/pages/Duruthu Full Moon.html
+++ b/pages/Duruthu Full Moon.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duruthu Full Moon</title>
-    <link rel="stylesheet" href="stylesheets/HNEStyles.css">
+    <link rel="stylesheet" href="../stylesheets/HNEStyles.css">
 </head>
 <body>
     <header class="headere">
         <nav>
-            <a href="pages/events_calendar.html">Cultural Calendar</a>
-            <a href="pages/ella.html">Nature's Wonders</a>
-            <a href="pages/heritage.html">Historic Treasures</a>
+            <a href="../pages/events_calendar.html">Cultural Calendar</a>
+            <a href="../pages/ella.html">Nature's Wonders</a>
+            <a href="../pages/heritage.html">Historic Treasures</a>
         </nav>
         <div class="account-container" onclick="toggleDropdown()">
             <div class="account-icon">
-                <img src="icons/user.png" alt="Account Icon">
+                <img src="../icons/user.png" alt="Account Icon">
             </div>
             <div class="dropdown" id="accountDropdown">
                 <div class="dropdown-header">
-                    <img src="icons/avatar.png" alt="User Avatar">
+                    <img src="../icons/avatar.png" alt="User Avatar">
                     <div class="user-info">
                         <h4>John Doe</h4>
                         <p>Online</p>
@@ -27,11 +27,11 @@
                 </div>
                 <div class="DD-links">
                     <ul class="dropdown-menu">
-                        <li><a href="pages/Profile.html"> Account </a></li>
+                        <li><a href="../pages/Profile.html"> Account </a></li>
                         <li>Travel Plan</li>
                         <li>Settings</li>
                         <li>Support</li>
-                        <li><a href="pages/Login.html">Logout</a></li>
+                        <li><a href="../pages/Login.html">Logout</a></li>
                     </ul>
                     </div>
             </div>
@@ -57,10 +57,10 @@ The impression of the footprint is sacred to other religions. In the Hindu tradi
                 <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <div class="social-media">
-                    <a href="#"><img src="icons/facebook.png" alt="Google"></a>
-                    <a href="#"><img src="icons/instagram.webp" alt="Facebook"></a>
-                    <a href="#"><img src="icons/youtube.webp" alt="Instagram"></a>
-                    <a href="#"><img src="icons/x.webp" alt="Twitter"></a>
+                    <a href="#"><img src="../icons/facebook.png" alt="Google"></a>
+                    <a href="#"><img src="../icons/instagram.webp" alt="Facebook"></a>
+                    <a href="#"><img src="../icons/youtube.webp" alt="Instagram"></a>
+                    <a href="#"><img src="../icons/x.webp" alt="Twitter"></a>
                 </div>
             </div>
     
