--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
-  <link rel="stylesheet" href="stylesheets/SignUp_styles.css">
+  <link rel="stylesheet" href="../stylesheets/SignUp_styles.css">
 </head>
 <body>
   <div class="container">
@@ -26,17 +26,17 @@
               <button type="submit" onclick="goToPage4()">Create account</button>
               <script>
                 function goToPage4() {
-                window.location.href = "login.html"; 
+                window.location.href = "../pages/login.html"; 
                 }
             </script>
           </form>
           <div class="signup">
-              Already have an account? <a href="Login.html">Login</a>
+              Already have an account? <a href="../pages/login.html">Login</a>
           </div>
           <div class="social-login">
-              <button><img src="icons/facebook.png"></button>
-              <button><img src="icons/Google.png"></button>
-              <button><img src="icons/Apple.png"></button>
+              <button><img src="../icons/facebook.png"></button>
+              <button><img src="../icons/Google.png"></button>
+              <button><img src="../icons/Apple.png"></button>
           </div>
       </div>
   </div>
