--- a/pages/events_calendar.html
+++ b/pages/events_calendar.html
@@ -260,10 +260,10 @@ function updateEventList() {
             <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <div class="social-media">
-                <a href="#"><img src="images/facebook.png" alt="Google"></a>
-                <a href="#"><img src="images/instagram.webp" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.webp" alt="Instagram"></a>
-                <a href="#"><img src="images/x.webp" alt="Twitter"></a>
+                <a href="#"><img src="../images/facebook.png" alt="Google"></a>
+                <a href="#"><img src="../images/instagram.webp" alt="Facebook"></a>
+                <a href="#"><img src="../images/youtube.webp" alt="Instagram"></a>
+                <a href="#"><img src="../images/x.webp" alt="Twitter"></a>
             </div>
         </div>
 
