--- a/pages/H-Heritage_List.html
+++ b/pages/H-Heritage_List.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/List.css">
+  <link rel="stylesheet" href="../stylesheets/List.css">
   <title>Heritage List</title>
   
 </head>
@@ -11,17 +11,17 @@
   
   <header class="headerd">
     <nav>
-        <a href="events_calendar.html">Cultural Calendar</a>
-        <a href="N-Heritage_List.html">Nature's Wonders</a>
-        <a href="H-Heritage_List.html">Historic Treasures</a>
+        <a href="../pages/events_calendar.html">Cultural Calendar</a>
+        <a href="../pages/index.html">Home</a>
+        <a href="../pages/H-Heritage_List.html">Historic Treasures</a>
     </nav>
     <div class="account-container" onclick="toggleDropdown()">
         <div class="account-icon">
-            <img src="images/user.png" alt="Account Icon">
+            <img src="../icons/user.png" alt="Account Icon">
         </div>
         <div class="dropdown" id="accountDropdown">
             <div class="dropdown-header">
-                <img src="images/avatar.png" alt="User Avatar">
+                <img src="../icons/avatar.png" alt="User Avatar">
                 <div class="user-info">
                     <h4>John Doe</h4>
                     <p>Online</p>
@@ -29,11 +29,11 @@
             </div>
             <div class="DD-links">
                 <ul class="dropdown-menu">
-                    <li><a href="Profile.html"> Account </a></li>
-                    <li><a href="Travel_Plan.html">Travel Plan</a></li>
+                    <li><a href="../pages/Profile.html"> Account </a></li>
+                    <li><a href="../pages/Travel_Plan.html">Travel Plan</a></li>
                     <li>Settings</li>
                     <li>Support</li>
-                    <li><a href="Login.html">Logout</a></li>
+                    <li><a href="../pages/Login.html">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +42,7 @@
 </header>
 <main>
     <section class="card" onclick="location.href='sigiriya.html';">
-        <img src="images/sigiriya 2.png" alt="Sigiriya">
+        <img src="../images/sigiriya 2.png" alt="Sigiriya">
         <div class="card-content">
             <h2>Sigiriya</h2>
             <p>Sigiriya, also known as the Lion Rock, is an ancient rock fortress in Sri Lanka. This UNESCO World Heritage Site is famous for its stunning frescoes, water gardens, and breathtaking views from the summit.</p>
@@ -50,7 +50,7 @@
     </section>
 
     <section class="card" onclick="location.href='isurumuniya.html';">
-        <img src="images/Isurumuniya.jpg" alt="Isurumuniya Temple">
+        <img src="../images/Isurumuniya.jpg" alt="Isurumuniya Temple">
         <div class="card-content">
             <h2>Isurumuniya</h2>
             <p>Isurumuniya is a famous Buddhist temple in Anuradhapura, known for its beautiful stone carvings, including the famous 'Lovers' sculpture, depicting ancient Sri Lankan artistry.</p>
@@ -58,7 +58,7 @@
     </section>
 
     <section class="card" onclick="location.href='yapahuwa.html';">
-        <img src="images/Yapahuwa.jpg" alt="Yapahuwa Rock Fortress">
+        <img src="../images/Yapahuwa.jpg" alt="Yapahuwa Rock Fortress">
         <div class="card-content">
             <h2>Yapahuwa</h2>
             <p>Yapahuwa is an ancient rock fortress that once served as the capital of Sri Lanka. It is known for its majestic staircase leading to the ruins of a royal palace.</p>
@@ -66,7 +66,7 @@
     </section>
 
     <section class="card" onclick="location.href='belilena.html';">
-        <img src="images/Belilena.jpg" alt="Kitulgala Belilena">
+        <img src="../images/Belilena.jpg" alt="Kitulgala Belilena">
         <div class="card-content">
             <h2>Kitulgala Belilena</h2>
             <p>Belilena is a prehistoric cave in Kitulgala, where ancient human remains dating back thousands of years have been discovered. It offers a glimpse into Sri Lanka’s early human settlements.</p>
@@ -81,10 +81,10 @@
             <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <div class="social-media">
-                <a href="#"><img src="images/facebook.png" alt="Google"></a>
-                <a href="#"><img src="images/instagram.webp" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.webp" alt="Instagram"></a>
-                <a href="#"><img src="images/x.webp" alt="Twitter"></a>
+                <a href="#"><img src="../icons/facebook.png" alt="Google"></a>
+                <a href="#"><img src="../icons/instagram.webp" alt="Facebook"></a>
+                <a href="#"><img src="../icons/youtube.webp" alt="Instagram"></a>
+                <a href="#"><img src="../icons/x.webp" alt="Twitter"></a>
             </div>
         </div>
 
