--- a/pages/N-Heritage_List.html
+++ b/pages/N-Heritage_List.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/List.css">
+  <link rel="stylesheet" href="../stylesheets/List.css">
   <title>Heritage List</title>
   
 </head>
@@ -11,17 +11,17 @@
   
   <header class="headerd">
     <nav>
-        <a href="events_calendar.html">Cultural Calendar</a>
-        <a href="N-Heritage_List.html">Nature's Wonders</a>
-        <a href="H-Heritage_List.html">Historic Treasures</a>
+        <a href="../pages/events_calendar.html">Cultural Calendar</a>
+        <a href="../pages/index.html">Home</a>
+        <a href="../H-Heritage_List.html">Historic Treasures</a>
     </nav>
     <div class="account-container" onclick="toggleDropdown()">
         <div class="account-icon">
-            <img src="images/user.png" alt="Account Icon">
+            <img src="../icons/user.png" alt="Account Icon">
         </div>
         <div class="dropdown" id="accountDropdown">
             <div class="dropdown-header">
-                <img src="images/avatar.png" alt="User Avatar">
+                <img src="../icons/avatar.png" alt="User Avatar">
                 <div class="user-info">
                     <h4>John Doe</h4>
                     <p>Online</p>
@@ -29,11 +29,11 @@
             </div>
             <div class="DD-links">
             <ul class="dropdown-menu">
-                <li><a href="Profile.html"> Account </a></li>
-                <li><a href="Travel_Plan.html">Travel Plan</a></li>
+                <li><a href="../pages/Profile.html"> Account </a></li>
+                <li><a href="../pages/Travel_Plan.html">Travel Plan</a></li>
                 <li>Settings</li>
                 <li>Support</li>
-                <li><a href="Login.html">Logout</a></li>
+                <li><a href="../pages/Login.html">Logout</a></li>
             </ul>
             </div>
         </div>
@@ -42,8 +42,8 @@
 <main>
 
            
-        <section class="card" onclick="location.href='ella.html';">
-            <img src="images/Ella1.jpg" alt="Cultural Event">
+        <section class="card" onclick="location.href='../pages/ella.html';">
+            <img src="../images/Ella1.jpg" alt="Cultural Event">
             <div class="card-content">
                 <h2>Ella - Demodara</h2>
                 <p>Nested in the heart of Sri Lanka's hill country, Ella is a picturesque town that captivates visitors with its serene beauty, lush greenery, and rich history. Surrounded by rolling tea plantations, misty mountains, and cascading waterfalls, Ella offers a perfect getaway for nature lovers, adventurers, and history enthusiasts alike.</p>
@@ -52,7 +52,7 @@
         </section>
 
         <section class="card">
-            <img src="images/Ravana.jpg" alt="Natural Heritage">
+            <img src="../images/Ravana.jpg" alt="Natural Heritage">
             <div class="card-content">
                 <h2>Ravana Falls</h2>
                 <p>Ravana Falls is a popular waterfall in Sri Lanka, located near Ella. It is known for its picturesque beauty and is a must-visit for tourists exploring the region.</p>
@@ -60,7 +60,7 @@
         </section>
 
         <section class="card">
-            <img src="images/Babarakanda.jpg" alt="Historical Heritage">
+            <img src="../images/Babarakanda.jpg" alt="Historical Heritage">
             <div class="card-content">
                 <h2>Bambarakanda Falls</h2>
                 <p>Bambarakanda Falls is the tallest waterfall in Sri Lanka, plunging from a height of 263 meters. It is surrounded by lush greenery and offers a breathtaking sight for visitors.</p>
@@ -68,7 +68,7 @@
             
         </section>
         <section class="card">
-            <img src="images/Diyaluma.jpg" alt="Historical Heritage">
+            <img src="../images/Diyaluma.jpg" alt="Historical Heritage">
             <div class="card-content">
                 <h2>Diyaluma Falls</h2>
                 <p>Diyaluma Falls is another stunning waterfall near Ella, known for its multiple cascades and natural pools. It is a popular spot for hiking and photography.</p>
@@ -83,10 +83,10 @@
             <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <div class="social-media">
-                <a href="#"><img src="images/facebook.png" alt="Google"></a>
-                <a href="#"><img src="images/instagram.webp" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.webp" alt="Instagram"></a>
-                <a href="#"><img src="images/x.webp" alt="Twitter"></a>
+                <a href="#"><img src="../icons/facebook.png" alt="Google"></a>
+                <a href="#"><img src="../icons/instagram.webp" alt="Facebook"></a>
+                <a href="#"><img src="../icons/youtube.webp" alt="Instagram"></a>
+                <a href="#"><img src="../icons/x.webp" alt="Twitter"></a>
             </div>
         </div>
 
