--- a/pages/H-Heritage_List.html
+++ b/pages/H-Heritage_List.html
@@ -12,8 +12,8 @@
   <header class="headerd">
     <nav>
         <a href="../pages/events_calendar.html">Cultural Calendar</a>
+        <a href="../pages/N-heritage_List.html">Natural Heritage</a>
         <a href="../pages/index.html">Home</a>
-        <a href="../pages/H-Heritage_List.html">Historic Treasures</a>
     </nav>
     <div class="account-container" onclick="toggleDropdown()">
         <div class="account-icon">
