Update Duruthu Full Moon.html

--- a/pages/Duruthu Full Moon.html
+++ b/pages/Duruthu Full Moon.html
@@ -9,9 +9,10 @@
 <body>
     <header class="headere">
         <nav>
+            <a href="../pages/index.html">Home</a>
             <a href="../pages/events_calendar.html">Cultural Calendar</a>
-            <a href="../pages/ella.html">Nature's Wonders</a>
-            <a href="../pages/heritage.html">Historic Treasures</a>
+            <a href="../pages/N-Heritage_List.html">Nature's Wonders</a>
+            <a href="../pages/H-Heritage_List.html">Historic Treasures</a>
         </nav>
         <div class="account-container" onclick="toggleDropdown()">
             <div class="account-icon">
