--- a/pages/Index.html
+++ b/pages/Index.html
@@ -71,7 +71,7 @@
 
                                 <script>
                                     function goToPage1() {
-                                    window.location.href = "../pages/ella.html";
+                                    window.location.href = "../pages/N-Heritage_List.html";
                                     }
                                 </script>
                         </div>
@@ -85,7 +85,7 @@
 
                                 <script>
                                     function goToPage2() {
-                                    window.location.href = "../pages/heritage.html"; 
+                                    window.location.href = "../pages/H-Heritage_List.html"; 
                                     }
                                 </script>
                         </div>
