--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -85,8 +85,8 @@
   <header class="headerd">
     <nav>
         <a href="../pages/events_calendar.html">Cultural Calendar</a>
-        <a href="../pages/ella.html">Nature's Wonders</a>
-        <a href="../pages/heritage.html">Historic Treasures</a>
+        <a href="../pages/N-Heritage_List.html">Nature's Wonders</a>
+        <a href="../pages/H-Heritage_List.html">Historic Treasures</a>
     </nav>
     
 </header>
@@ -128,10 +128,10 @@
             <h1 style="font-family:Clicker Script;">HeritScope Lanka</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <div class="social-media">
-                <a href="#"><img src="images/facebook.png" alt="Google"></a>
-                <a href="#"><img src="images/instagram.webp" alt="Facebook"></a>
-                <a href="#"><img src="images/youtube.webp" alt="Instagram"></a>
-                <a href="#"><img src="images/x.webp" alt="Twitter"></a>
+                <a href="#"><img src="icons/facebook.png" alt="Google"></a>
+                <a href="#"><img src="icons/instagram.webp" alt="Facebook"></a>
+                <a href="#"><img src="icons/youtube.webp" alt="Instagram"></a>
+                <a href="#"><img src="icons/x.webp" alt="Twitter"></a>
             </div>
         </div>
 
