--- a/pages/events_calendar.html
+++ b/pages/events_calendar.html
@@ -11,9 +11,9 @@
   
   <header class="headerd">
     <nav>
-        <a href="../events_calendar.html">Cultural Calendar</a>
-        <a href="../ella.html">Nature's Wonders</a>
-        <a href="../heritage.html">Historic Treasures</a>
+        <a href="../pages/index.html">Home</a>
+        <a href="../pages/N-Heritage_List.html">Nature's Wonders</a>
+        <a href="../pages/H-Heritage_List.html">Historic Treasures</a>
     </nav>
     <div class="account-container" onclick="toggleDropdown()">
         <div class="account-icon">
