Update Duruthu Full Moon.html

--- a/pages/Duruthu Full Moon.html
+++ b/pages/Duruthu Full Moon.html
@@ -29,7 +29,7 @@
                 <div class="DD-links">
                     <ul class="dropdown-menu">
                         <li><a href="../pages/Profile.html"> Account </a></li>
-                        <li>Travel Plan</li>
+                        <li><a href="../add to plan.html">Travel Plan</li>
                         <li>Settings</li>
                         <li>Support</li>
                         <li><a href="../pages/Login.html">Logout</a></li>
