--- a/pages/Index.html
+++ b/pages/Index.html
@@ -33,7 +33,8 @@
                 <div class="DD-links">
                     <ul class="dropdown-menu">
                         <li><a href="../pages/Profile.html"> Account </a></li>
-                        <li>Travel Plan</li>
+                        <li><a href="../Travel_Plan.html">Travel Plan</li>
+                        <li><a href="../add to plan.html">Find Roots</li>
                         <li>Settings</li>
                         <li>Support</li>
                         <li><a href="../pages/Login.html">Logout</a></li>
