--- a/pages/ella.html
+++ b/pages/ella.html
@@ -29,7 +29,7 @@
                 <div class="DD-links">
                     <ul class="dropdown-menu">
                         <li><a href="../pages/Profile.html"> Account </a></li>
-                        <li><a href="../Travel_Plan.html">Find Roots</li>
+                        <li><a href="../Travel_Plan.html">Travel Plans</li>
                         <li><a href="../add to plan.html">Find Roots</li>
                         <li>Settings</li>
                         <li>Support</li>
