--- a/pages/events_calendar.html
+++ b/pages/events_calendar.html
@@ -30,6 +30,8 @@
             <div class="DD-links">
             <ul class="dropdown-menu">
                 <li><a href="../pages/Profile.html"> Account </a></li>
+              <li><a href="../add to plan.html">Find Roots</li>
+              <li><a href="../Travel Plan.html">Find Roots</li>
                 <li>Travel Plan</li>
                 <li>Settings</li>
                 <li>Support</li>
