--- a/pages/N-Heritage_List.html
+++ b/pages/N-Heritage_List.html
@@ -31,7 +31,7 @@
             <ul class="dropdown-menu">
                 <li><a href="../pages/Profile.html"> Account </a></li>
                 <li><a href="../pages/Travel_Plan.html">Travel Plan</a></li>
-                <li><a href="../add to plan.html">Find Roots</li>
+                <li><a href="../pages/add to plan.html">Find Roots</li>
                 <li>Settings</li>
                 <li>Support</li>
                 <li><a href="../pages/Login.html">Logout</a></li>
