--- a/pages/Thai Pongal.html
+++ b/pages/Thai Pongal.html
@@ -29,7 +29,8 @@
                 <div class="DD-links">
                     <ul class="dropdown-menu">
                         <li><a href="../pages/Profile.html"> Account </a></li>
-                        <li>Travel Plan</li>
+                        <li><a href="../pages/Travel_Paln.html">Travel Plan<a/></li>
+                        <li><a href="../pages/add to plan.html">Root Plan</a><li>
                         <li>Settings</li>
                         <li>Support</li>
                         <li><a href="../pages/Login.html">Logout</a></li>
