--- a/pages/Travel_Plan.html
+++ b/pages/Travel_Plan.html
@@ -32,7 +32,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="../pages/Profile.html"> Account </a></li>
                     <li><a href="../pages/Travel_Plan.html">Travel Plan</a></li>
-                    <li><a href="../add to plan.html">Find Roots</li>
+                    <li><a href="../pages/add to plan.html">Find Roots</a></li>
                     <li>Settings</li>
                     <li>Support</li>
                     <li><a href="../pages/Login.html">Logout</a></li>
