--- a/pages/sigiriya.html
+++ b/pages/sigiriya.html
@@ -28,8 +28,8 @@
                 <div class="DD-links">
                     <ul class="dropdown-menu">
                         <li><a href="../pages/Profile.html"> Account </a></li>
-                        <li><a href="../Travel Plan.html">Travel Plans</li>
-                        <li><a href="../add to plan.html">Find Roots</li>
+                        <li><a href="../pages/Travel Plan.html">Travel Plans</li>
+                        <li><a href="../pages/add to plan.html">Find Roots</li>
                         <li>Settings</li>
                         <li>Support</li>
                         <li><a href="../pages/Login.html">Logout</a></li>
