--- a/pages/add to plan.html
+++ b/pages/add to plan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add to Travel Plan</title>
-    <link rel="stylesheet" href="css/HNEStyles.css">
+    <link rel="stylesheet" href="../stylesheets/HNEStyles.css">
 </head>
 <body>
     <header>
@@ -38,36 +38,5 @@
 </html>
 
 
-edit this in ella .html              <a class="add-to-plan" href="add_to_plan.html">Add To Plan</a>
 
-css file
-
-
-main {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    background: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 8px;
-    text-align: center;
-}
-
-input, textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    background: #d42955;
-    color: white;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    cursor: pointer;
-    margin-top: 10px;
-}
 
